prometheus/helm-prometheus-stack/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  labels:
    name: prometheus-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: dashboard.prometheus.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-19-1634988631-grafana
            port: 
              number: 80
      # - pathType: Prefix
      #   path: "/prometheus"
      #   backend:
      #     service:
      #       name: prometheus
      #       port: 
      #         number: 9090
      # - pathType: Prefix
      #   path: "/alertmanager"
      #   backend:
      #     service:
      #       name: kube-prometheus-stack-19-1-alertmanager
      #       port: 
      #         number: 9093
